cmake_minimum_required(VERSION 3.25)

set(alpaka_USE_SOURCE_TREE ON)
set(alpaka_BUILD_BENCHMARKS OFF)
set(alpaka_BUILD_EXAMPLES OFF)
set(alpaka_TESTING OFF)

if(BACKEND STREQUAL "OPENMP")
    project(blabladorTests LANGUAGES CXX)
    set(alpaka_DEP_CUDA OFF)
elseif(BACKEND STREQUAL "CUDA")
    project(blabladorTests LANGUAGES CXX CUDA)
    set(alpaka_DEP_CUDA ON)
else()
    message(FATAL_ERROR "Please specify BACKEND: cmake .. -DBACKEND=OPENMP or -DBACKEND=CUDA")
endif()

if(NOT TARGET alpaka::alpaka)
    add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/../../" "${CMAKE_BINARY_DIR}/alpaka")
endif()

# Vector addition (10M elements)
add_executable(vectorAdd vectorAdd.cpp)
target_compile_definitions(vectorAdd PRIVATE NUM_ELEMENTS=10000000)
if(BACKEND STREQUAL "OPENMP")
    target_compile_definitions(vectorAdd PRIVATE ALPAKA_DISABLE_EXEC_GpuCuda)
endif()
target_link_libraries(vectorAdd PRIVATE alpaka::alpaka)

# Matrix addition (2000x5000)
add_executable(matrixAdd matrixAdd.cpp)
target_compile_definitions(matrixAdd PRIVATE MATRIX_ROWS=2000 MATRIX_COLS=5000)
if(BACKEND STREQUAL "OPENMP")
    target_compile_definitions(matrixAdd PRIVATE ALPAKA_DISABLE_EXEC_GpuCuda)
endif()
target_link_libraries(matrixAdd PRIVATE alpaka::alpaka)

# Naive matrix multiplication
add_executable(matMul matMul.cpp)
target_compile_definitions(matMul PRIVATE MATRIX_M=1000 MATRIX_K=1000 MATRIX_N=1000)
if(BACKEND STREQUAL "OPENMP")
    target_compile_definitions(matMul PRIVATE ALPAKA_DISABLE_EXEC_GpuCuda)
endif()
target_link_libraries(matMul PRIVATE alpaka::alpaka)

# Optimized matrix multiplication
add_executable(matMulOpt matMulOpt.cpp)
target_compile_definitions(matMulOpt PRIVATE MATRIX_M=1000 MATRIX_K=1000 MATRIX_N=1000)
if(BACKEND STREQUAL "OPENMP")
    target_compile_definitions(matMulOpt PRIVATE ALPAKA_DISABLE_EXEC_GpuCuda)
endif()
target_link_libraries(matMulOpt PRIVATE alpaka::alpaka)

include(${CMAKE_BINARY_DIR}/alpaka/cmake/alpakaCommon.cmake OPTIONAL)
alpaka_finalize(vectorAdd)
alpaka_finalize(matrixAdd)
alpaka_finalize(matMul)
alpaka_finalize(matMulOpt)

if(BACKEND STREQUAL "CUDA")
    set_target_properties(vectorAdd PROPERTIES CUDA_ARCHITECTURES "86")
    set_target_properties(matrixAdd PROPERTIES CUDA_ARCHITECTURES "86")
    set_target_properties(matMul PROPERTIES CUDA_ARCHITECTURES "86")
    set_target_properties(matMulOpt PROPERTIES CUDA_ARCHITECTURES "86")
endif()